src/main/java/wuz/gua/generate/GuaParser.java
package wuz.gua.generate;
// Generated from GuaParser.g4 by ANTLR 4.0
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import wuz.gua.generate.GuaParserVisitor;

import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class GuaParser extends Parser {
	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		QUOTE=8, SET=11, BEGIN=12, DO=22, String=26, SINGLEQUOTE=5, VEC_PAREN=6, 
		DEFINE=9, Whitespace=29, ARROW=4, LETSTAR=14, Identifier=28, Number=27, 
		ELSE=19, Boolean=24, IF=17, Comment=30, OR=21, Character=25, LPAREN=1, 
		DOT=3, RPAREN=2, LAMBDA=10, CASE=18, MAP_PAREN=7, LETREC=15, AND=20, LET=13, 
		COND=16, DELAY=23;
	public static final String[] tokenNames = {
		"<INVALID>", "'('", "')'", "'.'", "'=>'", "'''", "'#('", "'#hash('", "'quote'", 
		"'define'", "'lambda'", "'set!'", "'begin'", "'let'", "'let*'", "'letrec'", 
		"'cond'", "'if'", "'case'", "'else'", "'and'", "'or'", "'do'", "'delay'", 
		"Boolean", "Character", "String", "Number", "Identifier", "Whitespace", 
		"Comment"
	};
	public static final int
		RULE_program = 0, RULE_source = 1, RULE_expression = 2, RULE_literal = 3, 
		RULE_variable = 4, RULE_booleanLiteral = 5, RULE_numberLiteral = 6, RULE_characterLiteral = 7, 
		RULE_stringLiteral = 8, RULE_symbolLiteral = 9, RULE_quotation = 10, RULE_dataum = 11, 
		RULE_list = 12, RULE_abbrev = 13, RULE_vector = 14, RULE_map = 15, RULE_member = 16, 
		RULE_condition = 17, RULE_ifCondition = 18, RULE_condCondition = 19, RULE_condClause = 20, 
		RULE_caseCondition = 21, RULE_caseClause = 22, RULE_elseClause = 23, RULE_andCondition = 24, 
		RULE_orCondition = 25, RULE_localBind = 26, RULE_letBind = 27, RULE_letStarBind = 28, 
		RULE_letRecBind = 29, RULE_binds = 30, RULE_bind = 31, RULE_assignment = 32, 
		RULE_setAssignment = 33, RULE_sequence = 34, RULE_beginSequence = 35, 
		RULE_action = 36, RULE_iteration = 37, RULE_doIteration = 38, RULE_doBinds = 39, 
		RULE_doBind = 40, RULE_delayEval = 41, RULE_lambda = 42, RULE_rest = 43, 
		RULE_procedureCall = 44, RULE_definition = 45, RULE_body = 46;
	public static final String[] ruleNames = {
		"program", "source", "expression", "literal", "variable", "booleanLiteral", 
		"numberLiteral", "characterLiteral", "stringLiteral", "symbolLiteral", 
		"quotation", "dataum", "list", "abbrev", "vector", "map", "member", "condition", 
		"ifCondition", "condCondition", "condClause", "caseCondition", "caseClause", 
		"elseClause", "andCondition", "orCondition", "localBind", "letBind", "letStarBind", 
		"letRecBind", "binds", "bind", "assignment", "setAssignment", "sequence", 
		"beginSequence", "action", "iteration", "doIteration", "doBinds", "doBind", 
		"delayEval", "lambda", "rest", "procedureCall", "definition", "body"
	};

	@Override
	public String getGrammarFileName() { return "GuaParser.g4"; }

	@Override
	public String[] getTokenNames() { return tokenNames; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public ATN getATN() { return _ATN; }

	public GuaParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class ProgramContext extends ParserRuleContext {
		public SourceContext source(int i) {
			return getRuleContext(SourceContext.class,i);
		}
		public List<SourceContext> source() {
			return getRuleContexts(SourceContext.class);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(95); 
			_errHandler.sync(this);
			_la = _input.LA(1);
			do {
				{
				{
				setState(94); source();
				}
				}
				setState(97); 
				_errHandler.sync(this);
				_la = _input.LA(1);
			} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << SINGLEQUOTE) | (1L << Boolean) | (1L << Character) | (1L << String) | (1L << Number) | (1L << Identifier))) != 0) );
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SourceContext extends ParserRuleContext {
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public DefinitionContext definition() {
			return getRuleContext(DefinitionContext.class,0);
		}
		public SourceContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_source; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitSource(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SourceContext source() throws RecognitionException {
		SourceContext _localctx = new SourceContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_source);
		try {
			setState(101);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(99); definition();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(100); expression();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ExpressionContext extends ParserRuleContext {
		public SequenceContext sequence() {
			return getRuleContext(SequenceContext.class,0);
		}
		public ConditionContext condition() {
			return getRuleContext(ConditionContext.class,0);
		}
		public LambdaContext lambda() {
			return getRuleContext(LambdaContext.class,0);
		}
		public ProcedureCallContext procedureCall() {
			return getRuleContext(ProcedureCallContext.class,0);
		}
		public AssignmentContext assignment() {
			return getRuleContext(AssignmentContext.class,0);
		}
		public VariableContext variable() {
			return getRuleContext(VariableContext.class,0);
		}
		public LocalBindContext localBind() {
			return getRuleContext(LocalBindContext.class,0);
		}
		public IterationContext iteration() {
			return getRuleContext(IterationContext.class,0);
		}
		public DelayEvalContext delayEval() {
			return getRuleContext(DelayEvalContext.class,0);
		}
		public LiteralContext literal() {
			return getRuleContext(LiteralContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitExpression(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_expression);
		try {
			setState(113);
			switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(103); variable();
				}
				break;

			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(104); literal();
				}
				break;

			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(105); condition();
				}
				break;

			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(106); localBind();
				}
				break;

			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(107); assignment();
				}
				break;

			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(108); sequence();
				}
				break;

			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(109); iteration();
				}
				break;

			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(110); delayEval();
				}
				break;

			case 9:
				enterOuterAlt(_localctx, 9);
				{
				setState(111); lambda();
				}
				break;

			case 10:
				enterOuterAlt(_localctx, 10);
				{
				setState(112); procedureCall();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class LiteralContext extends ParserRuleContext {
		public CharacterLiteralContext characterLiteral() {
			return getRuleContext(CharacterLiteralContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public QuotationContext quotation() {
			return getRuleContext(QuotationContext.class,0);
		}
		public NumberLiteralContext numberLiteral() {
			return getRuleContext(NumberLiteralContext.class,0);
		}
		public LiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_literal; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final LiteralContext literal() throws RecognitionException {
		LiteralContext _localctx = new LiteralContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_literal);
		try {
			setState(120);
			switch (_input.LA(1)) {
			case Boolean:
				enterOuterAlt(_localctx, 1);
				{
				setState(115); booleanLiteral();
				}
				break;
			case Number:
				enterOuterAlt(_localctx, 2);
				{
				setState(116); numberLiteral();
				}
				break;
			case Character:
				enterOuterAlt(_localctx, 3);
				{
				setState(117); characterLiteral();
				}
				break;
			case String:
				enterOuterAlt(_localctx, 4);
				{
				setState(118); stringLiteral();
				}
				break;
			case LPAREN:
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 5);
				{
				setState(119); quotation();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VariableContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(GuaParser.Identifier, 0); }
		public VariableContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_variable; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitVariable(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VariableContext variable() throws RecognitionException {
		VariableContext _localctx = new VariableContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_variable);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122); match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BooleanLiteralContext extends ParserRuleContext {
		public TerminalNode Boolean() { return getToken(GuaParser.Boolean, 0); }
		public BooleanLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_booleanLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitBooleanLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BooleanLiteralContext booleanLiteral() throws RecognitionException {
		BooleanLiteralContext _localctx = new BooleanLiteralContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_booleanLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(124); match(Boolean);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class NumberLiteralContext extends ParserRuleContext {
		public TerminalNode Number() { return getToken(GuaParser.Number, 0); }
		public NumberLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_numberLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitNumberLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final NumberLiteralContext numberLiteral() throws RecognitionException {
		NumberLiteralContext _localctx = new NumberLiteralContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_numberLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(126); match(Number);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CharacterLiteralContext extends ParserRuleContext {
		public TerminalNode Character() { return getToken(GuaParser.Character, 0); }
		public CharacterLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_characterLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitCharacterLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CharacterLiteralContext characterLiteral() throws RecognitionException {
		CharacterLiteralContext _localctx = new CharacterLiteralContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_characterLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(128); match(Character);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StringLiteralContext extends ParserRuleContext {
		public TerminalNode String() { return getToken(GuaParser.String, 0); }
		public StringLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stringLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitStringLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StringLiteralContext stringLiteral() throws RecognitionException {
		StringLiteralContext _localctx = new StringLiteralContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_stringLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(130); match(String);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class SymbolLiteralContext extends ParserRuleContext {
		public TerminalNode Identifier() { return getToken(GuaParser.Identifier, 0); }
		public SymbolLiteralContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_symbolLiteral; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitSymbolLiteral(this);
			else return visitor.visitChildren(this);
		}
	}

	public final SymbolLiteralContext symbolLiteral() throws RecognitionException {
		SymbolLiteralContext _localctx = new SymbolLiteralContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_symbolLiteral);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132); match(Identifier);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class QuotationContext extends ParserRuleContext {
		public TerminalNode QUOTE() { return getToken(GuaParser.QUOTE, 0); }
		public DataumContext dataum() {
			return getRuleContext(DataumContext.class,0);
		}
		public QuotationContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_quotation; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitQuotation(this);
			else return visitor.visitChildren(this);
		}
	}

	public final QuotationContext quotation() throws RecognitionException {
		QuotationContext _localctx = new QuotationContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_quotation);
		try {
			setState(141);
			switch (_input.LA(1)) {
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 1);
				{
				setState(134); match(SINGLEQUOTE);
				setState(135); dataum();
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 2);
				{
				setState(136); match(LPAREN);
				setState(137); match(QUOTE);
				setState(138); dataum();
				setState(139); match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class DataumContext extends ParserRuleContext {
		public CharacterLiteralContext characterLiteral() {
			return getRuleContext(CharacterLiteralContext.class,0);
		}
		public SymbolLiteralContext symbolLiteral() {
			return getRuleContext(SymbolLiteralContext.class,0);
		}
		public StringLiteralContext stringLiteral() {
			return getRuleContext(StringLiteralContext.class,0);
		}
		public VectorContext vector() {
			return getRuleContext(VectorContext.class,0);
		}
		public ListContext list() {
			return getRuleContext(ListContext.class,0);
		}
		public BooleanLiteralContext booleanLiteral() {
			return getRuleContext(BooleanLiteralContext.class,0);
		}
		public MapContext map() {
			return getRuleContext(MapContext.class,0);
		}
		public NumberLiteralContext numberLiteral() {
			return getRuleContext(NumberLiteralContext.class,0);
		}
		public DataumContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_dataum; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitDataum(this);
			else return visitor.visitChildren(this);
		}
	}

	public final DataumContext dataum() throws RecognitionException {
		DataumContext _localctx = new DataumContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_dataum);
		try {
			setState(151);
			switch (_input.LA(1)) {
			case Boolean:
				enterOuterAlt(_localctx, 1);
				{
				setState(143); booleanLiteral();
				}
				break;
			case Number:
				enterOuterAlt(_localctx, 2);
				{
				setState(144); numberLiteral();
				}
				break;
			case Character:
				enterOuterAlt(_localctx, 3);
				{
				setState(145); characterLiteral();
				}
				break;
			case String:
				enterOuterAlt(_localctx, 4);
				{
				setState(146); stringLiteral();
				}
				break;
			case Identifier:
				enterOuterAlt(_localctx, 5);
				{
				setState(147); symbolLiteral();
				}
				break;
			case LPAREN:
			case SINGLEQUOTE:
				enterOuterAlt(_localctx, 6);
				{
				setState(148); list();
				}
				break;
			case VEC_PAREN:
				enterOuterAlt(_localctx, 7);
				{
				setState(149); vector();
				}
				break;
			case MAP_PAREN:
				enterOuterAlt(_localctx, 8);
				{
				setState(150); map();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ListContext extends ParserRuleContext {
		public ListContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_list; }
	 
		public ListContext() { }
		public void copyFrom(ListContext ctx) {
			super.copyFrom(ctx);
		}
	}
	public static class ProperListContext extends ListContext {
		public DataumContext dataum(int i) {
			return getRuleContext(DataumContext.class,i);
		}
		public List<DataumContext> dataum() {
			return getRuleContexts(DataumContext.class);
		}
		public ProperListContext(ListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitProperList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class PairOrImproperListContext extends ListContext {
		public DataumContext last;
		public DataumContext dataum(int i) {
			return getRuleContext(DataumContext.class,i);
		}
		public List<DataumContext> dataum() {
			return getRuleContexts(DataumContext.class);
		}
		public PairOrImproperListContext(ListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitPairOrImproperList(this);
			else return visitor.visitChildren(this);
		}
	}
	public static class AbbrevListContext extends ListContext {
		public DataumContext dataum() {
			return getRuleContext(DataumContext.class,0);
		}
		public AbbrevContext abbrev() {
			return getRuleContext(AbbrevContext.class,0);
		}
		public AbbrevListContext(ListContext ctx) { copyFrom(ctx); }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitAbbrevList(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ListContext list() throws RecognitionException {
		ListContext _localctx = new ListContext(_ctx, getState());
		enterRule(_localctx, 24, RULE_list);
		int _la;
		try {
			setState(174);
			switch ( getInterpreter().adaptivePredict(_input,8,_ctx) ) {
			case 1:
				_localctx = new ProperListContext(_localctx);
				enterOuterAlt(_localctx, 1);
				{
				setState(153); match(LPAREN);
				setState(157);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << SINGLEQUOTE) | (1L << VEC_PAREN) | (1L << MAP_PAREN) | (1L << Boolean) | (1L << Character) | (1L << String) | (1L << Number) | (1L << Identifier))) != 0)) {
					{
					{
					setState(154); dataum();
					}
					}
					setState(159);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(160); match(RPAREN);
				}
				break;

			case 2:
				_localctx = new PairOrImproperListContext(_localctx);
				enterOuterAlt(_localctx, 2);
				{
				setState(161); match(LPAREN);
				setState(163); 
				_errHandler.sync(this);
				_la = _input.LA(1);
				do {
					{
					{
					setState(162); dataum();
					}
					}
					setState(165); 
					_errHandler.sync(this);
					_la = _input.LA(1);
				} while ( (((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << SINGLEQUOTE) | (1L << VEC_PAREN) | (1L << MAP_PAREN) | (1L << Boolean) | (1L << Character) | (1L << String) | (1L << Number) | (1L << Identifier))) != 0) );
				setState(167); match(DOT);
				setState(168); ((PairOrImproperListContext)_localctx).last = dataum();
				setState(169); match(RPAREN);
				}
				break;

			case 3:
				_localctx = new AbbrevListContext(_localctx);
				enterOuterAlt(_localctx, 3);
				{
				setState(171); abbrev();
				setState(172); dataum();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AbbrevContext extends ParserRuleContext {
		public AbbrevContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_abbrev; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitAbbrev(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AbbrevContext abbrev() throws RecognitionException {
		AbbrevContext _localctx = new AbbrevContext(_ctx, getState());
		enterRule(_localctx, 26, RULE_abbrev);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(176); match(SINGLEQUOTE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class VectorContext extends ParserRuleContext {
		public DataumContext dataum(int i) {
			return getRuleContext(DataumContext.class,i);
		}
		public List<DataumContext> dataum() {
			return getRuleContexts(DataumContext.class);
		}
		public VectorContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_vector; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitVector(this);
			else return visitor.visitChildren(this);
		}
	}

	public final VectorContext vector() throws RecognitionException {
		VectorContext _localctx = new VectorContext(_ctx, getState());
		enterRule(_localctx, 28, RULE_vector);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178); match(VEC_PAREN);
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << LPAREN) | (1L << SINGLEQUOTE) | (1L << VEC_PAREN) | (1L << MAP_PAREN) | (1L << Boolean) | (1L << Character) | (1L << String) | (1L << Number) | (1L << Identifier))) != 0)) {
				{
				{
				setState(179); dataum();
				}
				}
				setState(184);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(185); match(RPAREN);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MapContext extends ParserRuleContext {
		public List<MemberContext> member() {
			return getRuleContexts(MemberContext.class);
		}
		public MemberContext member(int i) {
			return getRuleContext(MemberContext.class,i);
		}
		public MapContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_map; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof GuaParserVisitor ) return ((GuaParserVisitor<? extends T>)visitor).visitMap(this);
			else return visitor.visitChildren(this);
		}
	}
